# Idaten

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260705_0001_mvp_0_1.py  20260706_0002_mvp_0_2_groups.py  20260706_0003_file_ingestion.py  20260706_0004_health_connect.py  20260707_0005_coach_engine.py  20260708_0006_guided_sync.py  20260711_0007_assisted_input.py  20260712_0008_running_goals.py  20260712_0009_readiness_check_ins.py  20260712_0010_next_run_recommendations.py  20260712_0011_unified_ai.py  20260712_0012_health_connect_sleep.py
backend/app/: __init__.py  main.py  services.py
backend/app/activities/: __init__.py  domain.py  duplicates.py  history.py  models.py  repository.py  schemas.py  service.py  standards.py
backend/app/ai/: __init__.py  contracts.py  (+4 more)
backend/tests/: test_activity_history.py  test_adaptive_coach.py  test_ai_service.py  test_alembic.py  test_assisted_provider.py  test_assisted_service.py  test_assisted_transport.py  test_bot_groups.py  test_bot_presentation.py  test_coach_domain.py  test_coach_service.py  test_goal_readiness.py  test_groups.py  test_health.py  test_health_connect_api.py  test_health_connect_service.py  test_import_api.py  test_ingestion_adapters.py  test_ingestion_security.py  test_ingestion_service.py  test_metrics.py  test_monthly_reports.py  test_next_transport.py  test_parsing.py  test_personal_analytics.py  test_recommendation_lifecycle.py  test_services.py
(+147 files in other folders)
