[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idaten-backend"
version = "0.1.0"
description = "Idaten running tracker backend and Telegram bot"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.20,<4",
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.9,<3",
  "sqlalchemy[asyncio]>=2.0.40,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.26,<1",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
